--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-particles-js": "^1.5.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
