--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "csshake": "^1.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
     "react": "^15.6.1",
+    "react-animations": "^0.1.0",
+    "react-d3-cloud": "^0.5.0",
     "react-dom": "^15.6.1",
     "react-particles-js": "^1.5.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "reshake": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts-with-sass start",
