--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^1.1.1",
     "csshake": "^1.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-animations": "^0.1.0",
+    "react-chartjs": "^0.8.0",
     "react-d3-cloud": "^0.5.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
     "react-particles-js": "^1.5.0",
+    "react-pathjs-chart": "^0.3.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
