--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^1.1.1",
+    "chartkick": "^2.2.4",
     "csshake": "^1.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
@@ -12,8 +13,10 @@
     "react": "^15.6.2",
     "react-animations": "^0.1.0",
     "react-chartjs": "^0.8.0",
+    "react-chartkick": "^0.1.3",
     "react-d3-cloud": "^0.5.0",
     "react-dom": "^15.6.2",
+    "react-google-charts": "^1.5.5",
     "react-particles-js": "^1.5.0",
     "react-pathjs-chart": "^0.3.5",
     "react-router": "^4.2.0",
