--- a/package.json
+++ b/package.json
@@ -1,39 +1,60 @@
 {
-  "name": "my-profile",
-  "version": "0.1.0",
+  "name": "mlassakoski-profile",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "private": true,
   "dependencies": {
-    "chart.js": "^1.1.1",
-    "chartkick": "^2.2.4",
-    "csshake": "^1.5.2",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.3",
+    "animate.css": "^3.5.2",
+    "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
-    "react": "^15.6.2",
-    "react-animations": "^0.1.0",
-    "react-chartjs": "^0.8.0",
-    "react-chartkick": "^0.1.3",
-    "react-d3-cloud": "^0.5.0",
-    "react-dom": "^15.6.2",
-    "react-google-charts": "^1.5.5",
-    "react-particles-js": "^1.5.0",
-    "react-pathjs-chart": "^0.3.5",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13",
-    "react-tagcloud": "^1.2.0",
-    "reshake": "^1.0.7",
-    "wordcloud": "^1.0.6"
-  },
-  "scripts": {
-    "start": "react-scripts-with-sass start",
-    "dev": "react-scripts-with-sass start",
-    "build": "npm run build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "ng-teximate": "^0.6.3",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "create-react-app-sass": "^1.1.0"
+    "@angular/cli": "1.5.3",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2"
   }
 }
