--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "materialize-css": "^0.100.2",
     "ng-teximate": "^0.6.3",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "typescript": "~2.4.2"
   },
   "devDependencies": {
     "@types/jasmine": "~2.5.53",
@@ -63,6 +64,5 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
   }
 }
