--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.5.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
     "@angular/animations": "^5.1.0",
     "@angular/cdk": "^5.0.0",
+    "@angular/cli": "1.5.3",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@angular/material": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.3",
+    "@swimlane/ngx-charts": "^7.0.1",
     "animate.css": "^3.5.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
@@ -44,8 +45,8 @@
     "materialize-css": "^0.100.2",
     "ng-teximate": "^0.6.3",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@types/jasmine": "~2.5.53",
