--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
+    "build:prod": "npm run build -- --prod --aot",
+    "test": "ng test -sr",
+    "test:coverage": "rimraf coverage && npm run test -- -cc",
+    "lint": "ng lint --type-check",
+    "lint:fix": "ng lint --fix",
+    "lint:styles": "stylelint ./src/**/*.scss ./src/**/**/*.scss",
+    "lint:ci": "yarn lint && yarn lint:styles",
     "e2e": "ng e2e",
     "deploy": "git push origin master && git push heroku master",
-    "postinstall": "ng build"
+    "postinstall": "lint:ci && ng build",
+    "prepush": "yarn lint:ci"
   },
   "engines": {
-    "node": "8.4.0",
-    "npm": "5.3.0"
+    "node": "9.6.1",
+    "yarn": "1.3.2"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.4.3",
     "@angular/animations": "^5.1.0",
     "@angular/cdk": "^5.0.0",
-    "@angular/cli": "1.5.3",
+    "@angular/cli": "^1.7.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
@@ -32,19 +39,21 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.3",
     "@swimlane/ngx-charts": "^7.0.1",
     "animate.css": "^3.5.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
+    "global": "^4.3.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
     "ng-teximate": "^0.6.3",
+    "prepush": "^3.1.11",
+    "rimraf": "^2.6.2",
     "rxjs": "^5.5.2",
+    "stylelint": "^9.1.1",
     "typescript": "~2.4.2",
     "zone.js": "^0.8.14"
   },
