--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@angular/cdk": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -53,6 +52,8 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular/cli": "^1.7.2",
+    "@angular/compiler-cli": "^5.2.7",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
