--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "start:local": "ng serve",
     "build": "ng build ",
-    "build:prod": "npm run build -- --prod --aot",
+    "build:prod": "ng build --prod --aot",
     "test": "ng test -sr",
     "test:coverage": "rimraf coverage && npm run test -- -cc",
     "lint": "ng lint --type-check",
@@ -14,8 +15,7 @@
     "lint:styles": "stylelint ./src/**/*.scss ./src/**/**/*.scss",
     "lint:ci": "yarn lint && yarn lint:styles",
     "e2e": "ng e2e",
-    "deploy": "git push origin master && git push heroku master",
-    "postinstall": "ng build",
+    "postinstall": "yarn lint && yarn lint:styles",
     "prepush": "yarn lint:ci"
   },
   "private": true,
