--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "start:local": "ng serve",
     "build": "ng build ",
-    "build:prod": "ng build --prod --aot",
+    "build:prod": "ng build --prod -aot=false",
     "test": "ng test -sr",
     "test:coverage": "rimraf coverage && npm run test -- -cc",
     "lint": "ng lint --type-check",
