--- a/package.json
+++ b/package.json
@@ -21,31 +21,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "5.2.3",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@angular/cdk": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "@angular/material": "5.2.3",
     "animate.css": "^3.5.2",
+    "core-js": "^2.4.1",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
-    "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
     "ng-teximate": "^0.6.3",
     "prepush": "^3.1.11",
     "rimraf": "^2.6.2",
+    "rxjs": "^5.5.6",
     "stylelint": "^9.1.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.7",
